syntax = "proto3";

option go_package = "verifier";

enum HashAlgorithm  {
    SHA2_256 = 0;
    SHA2_512 = 1;
    SHA3_256 = 2;
    SHA3_512 = 3;
}

enum SignatureLevel {
    ADVANCED = 0;
    QUALIFIED = 1;
}

message SignatureData {
    bytes hash = 1;
    repeated bytes salted_hashes = 2;
    HashAlgorithm hash_algorithm = 3;
    bytes salt = 4;
    SignatureLevel signature_level = 5;
    bytes id_token = 10;
    bytes x509_idp = 11;
    bytes x509_idp_ca = 12;
    LTV idp_ltv = 13;
}

message Timestamped {
    bytes rfc3161_timestamp = 1;
    LTV ltv = 2;
}

message SignatureContainer {
    bytes envelopedSignatureData = 1; // pkcs#7 DER encoded bytes
    LTV ltv = 2;
}

message LTV {
    bytes ocsp = 1;
    bytes crl = 2;
}

message SignatureFile {
    SignatureContainer signatureContainer = 1;
    repeated Timestamped timestamps = 2; // this is for renewal of the signature, new timestamps, timestamp the old one
}